--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Noda</title>
+    <link href="./assets/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <h1>Noda</h1>
+    <div class="container">
+    </div>
+    <aside>
+      Play Noda
+      <p> Objectives:
+    </aside>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <script src="./assets/script.js"></script>
 
   </body>
 </html>
