Amended bug (click handler)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <ul>
               <li>Nodes cannot be combined if sum exceeds 9</li>
             </ul>
+            <li>Diagonal moves are not allowed</li>
             <li><strong>Objective</strong>: Form target numbers on colored nodes</li>
           </ol>
         </div>
