--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./assets/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Noda</h1>
+    <h1>Noda Lite</h1>
     <!-- <button class="restart">Try again</button> -->
     <div class='goal'>
 
