Added undo move button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
     <div class="container">
       <button class="restart">Try again</button>
+      <button class="undo">Undo move</button>
         <div class='grid'>
         </div>
         <div class='instructions'>
